# demografix-rust

./: Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
examples/: demographic_mix.rs
src/: blocking.rs  client.rs  errors.rs  lib.rs  models.rs
tests/: blocking_test.rs  client_test.rs
